organic-1.0.0/k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
    app: ecommerce-website
